# vibe

./: README.md  demo.py  pyproject.toml
.github/workflows/: release.yaml
src/vibe/: __init__.py  style.py
