[project]
name = "streamlit-vibe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alejandro Piad", email = "apiad@apiad.net" }
]
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.52.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vibe"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
